--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,5 +1,4 @@
 <div th:fragment="header">
-
     <div>
         <!--    <link rel="stylesheet" href="main.css">-->
         <style>
@@ -89,6 +88,9 @@
                         <li>
                             <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-add-week">ТСЦ.. звіт щоденний</a>
                         </li>
+<!--                        <li>-->
+<!--                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-week-view1">ТСЦ.11. звіт щоденний</a>-->
+<!--                        </li>-->
 <!--                        <li>-->
 <!--                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/rubin-view">РСЦ.. довідка щотижнева</a>-->
 <!--                        </li>-->
