--- a/src/main/resources/templates/rubin/week/rubin-week-view1.html
+++ b/src/main/resources/templates/rubin/week/rubin-week-view1.html
@@ -4,6 +4,10 @@
 <head>
     <title>Блог РСЦ NNNNNNN</title>
 <!--    <link rel="stylesheet" th:href="@{../../../style.css}">-->
+
+<!--    <link rel="stylesheet" type="text/css" media="all"-->
+<!--          href="../../css/gtvg.css" data-th-href="@{/css/gtvg.css}" />-->
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <style>
 
