--- a/src/main/resources/templates/rubin/week/rubin-week-edit.html
+++ b/src/main/resources/templates/rubin/week/rubin-week-edit.html
@@ -15,7 +15,7 @@
         <input type="text" th:value="${rwe.pidrozdil}" name="pidrozdil" placeholder="Підрозділ" class="form-control"
                id="pidrozdil"><br>
         <label for="data_v">Дата : </label>
-        <input type="date" th:value="${rwe.data_v}" name="data_v" placeholder="Дата внесення" class="form-control"
+        <input type="date" th:value="${rwe.data}" name="data_v" placeholder="Дата внесення" class="form-control"
                id="data_v"><br>
 
         <label for="week">Кількість звернень за день : </label>
