--- a/src/main/resources/templates/rubin/week/rubin-add-week.html
+++ b/src/main/resources/templates/rubin/week/rubin-add-week.html
@@ -18,7 +18,7 @@
                    class="form-control" id="pidrozdil"><br>
 
             <label for="data_v">Дата : </label>
-            <input type="date" th:value="${rubin_week.data_v}" name="data_v" placeholder="Дата внесення"
+            <input type="date" th:value="${rubin_week.data}" name="data_v" placeholder="Дата внесення"
                    class="form-control" id="data_v"><br>
             <!--            <input class="form-control" type="date" id="data_v" th:value="${rubin_week.data_v}" [ngModel] ="data_v | date:'yyyy-MM-dd'" (ngModelChange)="$event = data_v" name="data_v" min="2016-10-01" >-->
             <!--        <input class="form-con<input class="form-control" type="date" [ngModel] ="dateFrom | date:'yyyy-MM-dd'" (ngModelChange)="$event = dateFrom" name="dateFrom" min="2016-10-01" [value]="2016-10-01" />trol" type="date" [ngModel] ="dateFrom | date:'dd-mm-yyyy'" (ngModelChange)="$event = dateFrom" name="dateFrom" min="01-01-1900" [value]="01-10-2016" />-->
