--- a/src/main/resources/templates/rubin/week/rubin-week-view.html
+++ b/src/main/resources/templates/rubin/week/rubin-week-view.html
@@ -74,13 +74,13 @@
             <br>
             <button type="submit" class="btn btn-success" name="action" value="search">Пошук</button>
 
-            <button type="submit" class="btn btn-success" name="action" value="print">Тижневий звіт ТСЦ</button>
-            <button type="submit" class="btn btn-success" name="action" value="print_month">Помісячний звіт ТСЦ</button>
+            <button type="submit" class="btn btn-success" name="action" value="print">Тижневий звіт</button>
+            <button type="submit" class="btn btn-success" name="action" value="print_month">Помісячний звіт</button>
 
-            <button type="submit" class="btn btn-success" name="action" value="print_week_rsc">Тижневий, звіт РСЦ
-            </button>
-            <button type="submit" class="btn btn-success" name="action" value="print_month_rsc">Помісячний, звіт РСЦ
-            </button>
+<!--            <button type="submit" class="btn btn-success" name="action" value="print_week_rsc">Тижневий, звіт РСЦ-->
+<!--            </button>-->
+<!--            <button type="submit" class="btn btn-success" name="action" value="print_month_rsc">Помісячний, звіт РСЦ-->
+<!--            </button>-->
 
             <table>
                 <tr >
