Added new functionality for working with local data of the regional database

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -68,12 +68,13 @@
         <nav class="d-inline-flex mt-0 mt-md-0 ms-md-auto">
             <!--            <ul class="menu">-->
             <ul>
-                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Главная</a></li>
+                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Головна</a></li>
+                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/karta/search">Компан</a></li>
                 <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Toppan CP 500</a>
                     <ul class="submenu">
                         <li><a class="me-3 py-2 text-dark text-decoration-none" href="/printer/toppan">Принтера</a>
                         </li>
-                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/printer/toppan-add">Добавим
+                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/printer/toppan-add">Додати
                             принтер</a></li>
                         <li><a class="me-3 py-2 text-dark text-decoration-none" href="/printer/Total_Count">Total
                             Count</a></li>
@@ -88,16 +89,6 @@
                         <li>
                             <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-add-week">ТСЦ.. звіт щоденний</a>
                         </li>
-<!--                        <li>-->
-<!--                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/week/rubin-week-view1">ТСЦ.11. звіт щоденний</a>-->
-<!--                        </li>-->
-<!--                        <li>-->
-<!--                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/rubin-view">РСЦ.. довідка щотижнева</a>-->
-<!--                        </li>-->
-<!--                        <li>-->
-<!--                            <a class="me-3 py-2 text-dark text-decoration-none" href="/rubin/rubin-view-month">РСЦ.. помісячні</a>-->
-<!--                        </li>-->
-
                     </ul>
                 </li>
 
