--- a/src/main/resources/templates/printer/toppan-add.html
+++ b/src/main/resources/templates/printer/toppan-add.html
@@ -24,7 +24,7 @@
         <form action="../printer/toppan-add" method="post">
             <input type="text" name="sn" placeholder="Серийній номер" class="form-control"><br>
             <input type="text" name="code" placeholder="Номенклатурный номер" class="form-control"><br>
-            <input type="text" name="datawork" placeholder="Дата ввеения в эксплуатацию" class="form-control"><br>
+            <input type="text" name="datawork" placeholder="Дата введения в эксплуатацию" class="form-control"><br>
             <input type="text" name="pidrozdil" placeholder="Підрозділ" class="form-control"><br>
             <textarea name="completeness" placeholder="Комплектность" class="form-control"></textarea><br>
             <button type="submit" class="btn btn-success">Записать</button>
