Added new functionality for working with local data of the regional database. 24.12.2022

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -69,7 +69,7 @@
             <!--            <ul class="menu">-->
             <ul>
                 <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Головна</a></li>
-                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/karta/search">Компан</a></li>
+                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/karta/searchAMT">Компан</a></li>
                 <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Toppan CP 500</a>
                     <ul class="submenu">
                         <li><a class="me-3 py-2 text-dark text-decoration-none" href="/printer/toppan">Принтера</a>
