--- a/src/main/resources/templates/karta/test.html
+++ b/src/main/resources/templates/karta/test.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>History</title>
-    <link rel="stylesheet" href="mysite.css">
+    <link rel="stylesheet" href="../../css/mysite.css">
 
 </head>
 <body>
