--- a/src/main/resources/templates/karta/searchAMT.html
+++ b/src/main/resources/templates/karta/searchAMT.html
@@ -2,11 +2,20 @@
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-<link th:href="@{/css/main.css}"/>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Search</title>
-    <link rel="stylesheet" th:href="@{css/mysite.css}">
+    <link th:href="@{css/cssandjs.css rel=stylesheet type=text/css}">
+
+<!--    <style type="text/css">-->
+
+<!--        h22 {-->
+<!--            font-family: sans-serif;-->
+<!--            font-size: 3.5em;-->
+<!--            text-transform: uppercase;-->
+<!--            color:brown;-->
+<!--        }-->
+<!--    </style>-->
 </head>
 <body>
 
@@ -25,6 +34,8 @@
     <br/>
 
     <input type="date">
+
+    <h2>Carefully Styled Heading</h2>
 
 </form>
 
