--- a/src/main/resources/templates/karta/searchAMT.html
+++ b/src/main/resources/templates/karta/searchAMT.html
@@ -5,7 +5,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Search</title>
-<!--    <link th:href="@{css/cssandjs.css rel=stylesheet type=text/css}">-->
+    <link th:href="@{static/cssandjs.css}" rel="stylesheet">
 
 <!--    <style type="text/css">-->
 
