--- a/src/main/resources/templates/karta/searchAMT.html
+++ b/src/main/resources/templates/karta/searchAMT.html
@@ -5,7 +5,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Search</title>
-    <link th:href="@{static/cssandjs.css}" rel="stylesheet">
+<!--    <link th:href="@{/css/style.css}" rel="stylesheet"/>-->
+    <link rel="stylesheet" type="text/css" th:href="@{/static/css/style.css}" />
+<!--    <link rel="stylesheet" type="text/css" media="all" href="../assets/css/style.css" th:href="@{/css/style.css}" />-->
+<!--    <link href="../static/css/cssandjs.css" th:href="@{/templates/static/css/cssandjs.css}" rel="stylesheet" />-->
 
 <!--    <style type="text/css">-->
 
