--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -2,7 +2,7 @@ h2 {
     font-family: sans-serif;
     font-size: 3.5em;
     text-transform: uppercase;
-    color:brown;
+    color:#6f93dc;
 }
 
 strong {
