Added new functionality for working with local data of the regional database. 05.01.2023

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,8 +1,8 @@
-h2 {
+.h2 {
     font-family: sans-serif;
     font-size: 3.5em;
     text-transform: uppercase;
-    color:#6f93dc;
+    color:brown;
 }
 
 strong {
