--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -71,6 +71,7 @@
             <ul>
                 <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Головна</a></li>
                 <li><a class="me-3 py-2 text-dark text-decoration-none" href="/karta/searchAMT">Компан</a></li>
+                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/karta/test">Test</a></li>
                 <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Toppan CP 500</a>
                     <ul class="submenu">
                         <li><a class="me-3 py-2 text-dark text-decoration-none" href="/printer/toppan">Принтера</a>
