Added new functionality for working with local data of the regional database. 09.01.2023

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,4 +1,11 @@
-.h2 {
+oo {
+    font-family: sans-serif;
+    font-size: 3.5em;
+    text-transform: uppercase;
+    color:brown;
+}
+
+h3 {
     font-family: sans-serif;
     font-size: 3.5em;
     text-transform: uppercase;
