--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -91,6 +91,7 @@
                         </li>
                     </ul>
                 </li>
+                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/karta/test">Test</a></li>
 
             </ul>
         </nav>
