--- a/src/main/resources/templates/karta/searchAMT.html
+++ b/src/main/resources/templates/karta/searchAMT.html
@@ -5,7 +5,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Search</title>
-    <link rel="stylesheet" th:href ="@{/css/style.css}"/>
+    <link th:href="@{/css/style.css}" rel="stylesheet" />
 <!--    <link rel="stylesheet" type="text/css" th:href="@{/templates/css/style.css}" />-->
 <!--    <link rel="stylesheet" type="text/css" media="all" href="../assets/css/style.css" th:href="@{/css/style.css}" />-->
 <!--    <link href="../static/css/cssandjs.css" th:href="@{/templates/static/css/cssandjs.css}" rel="stylesheet" />-->
@@ -39,7 +39,7 @@
 
     <input type="date">
 
-    <h2>Carefully Styled Heading</h2>
+    <oo>Carefully Styled Heading</oo>
 
 </form>
 
