--- a/src/main/resources/templates/karta/test.html
+++ b/src/main/resources/templates/karta/test.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>History</title>
-    <link rel="stylesheet" href="../../css/mysite.css">
+    <link th:href="@{/css/style.css}" rel="stylesheet" />
 
 </head>
 <body>
@@ -29,6 +29,7 @@
         <td><a th:text="${AmtHyst.getData_oper()}"></a></td>
     </tr>
 </table>
-
+<oo>Carefully Styled Heading</oo>
+<h5>Carefully Styled Heading</h5>
 </body>
 </html>
